--- a/snippets/multi-column-text.liquid
+++ b/snippets/multi-column-text.liquid
@@ -1,22 +1,32 @@
 {% liquid
-    assign title = block.settings.title
+    assign title = block.settings.title | escape
     assign text = block.settings.text
     assign link = block.settings.link
+    assign image = block.settings.image
 %}
 
-<div class='featured-multi-column-card featured-multi-column_type--{{ block.type }}' {{ block.shopify_attributes }}>
-    <div class='featured-multi-column-card__info'>
-        {% if title != blank %}
-            <h3 class='featured-multi-column__title h6'>
-                {% if link != blank %}
-                    <a href='{{ link }}'>{{ title | escape }}</a>
-                {% else %}
-                    {{ title | escape }}
-                {% endif %}
-            </h3>
+<div class="featured-multi-column-card featured-multi-column_type--{{ block.type }}" {{ block.shopify_attributes }}>
+    <div class="featured-multi-column-card__info">
+        {% if image != blank %}
+            <div class="featured-multi-column__image">
+                {{ image | image_url: width: 50 | image_tag: preload: true, loading: 'lazy', alt: title }}
+            </div>
         {% endif %}
-        {% if text != blank %}
-            <div class='featured-multi-column__text rte utility'>{{ text }}</div>
+        {% if title != blank or text != blank %}
+            <div class="featured-multi-column__content">
+                {% if title != blank %}
+                    <h3 class="featured-multi-column__title h6">
+                        {% if link != blank %}
+                            <a href="{{ link }}">{{ title }}</a>
+                        {% else %}
+                            {{ title }}
+                        {% endif %}
+                    </h3>
+                {% endif %}
+                {% if text != blank %}
+                    <div class="featured-multi-column__text rte utility">{{ text }}</div>
+                {% endif %}
+            </div>
         {% endif %}
     </div>
 </div>
