--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -127,6 +127,8 @@
 
         {% section 'cart-drawer' %}
 
+        {% section 'cookie-notice' %}
+
         <ul hidden>
             <li id="a11y-refresh-page-message">{{ 'accessibility.refresh_page' | t }}</li>
         </ul>
