--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -126,7 +126,7 @@
         {% section 'footer' %}
 
         {% section 'cart-drawer' %}
-
+        {% section 'newsletter-popup' %}
         {% section 'cookie-notice' %}
 
         <ul hidden>
