--- a/scss/base/_forms.scss
+++ b/scss/base/_forms.scss
@@ -324,6 +324,8 @@ option:hover {
     line-height: 1.4;
     margin: .8rem 0 1.5rem;
     padding: .5rem 1rem;
+    display: flex;
+    align-items: center;
 }
 
 .success-message img {
@@ -339,7 +341,9 @@ option:hover {
     letter-spacing: -0.01em;
     line-height: 1.4;
     margin: .8rem 0 1.5rem;
-    padding: .5rem 1rem
+    padding: .5rem 1rem;
+    display: flex;
+    align-items: center;
 }
 
 .error-message--input {
@@ -349,6 +353,8 @@ option:hover {
     font-size: 1.2rem;
     letter-spacing: 0;
     line-height: 1.5;
+    display: flex;
+    align-items: center;
 }
 
 .error-message img {
@@ -357,7 +363,7 @@ option:hover {
 }
 
 .error-message--input img {
-    margin-right: 0;
+    margin-right: .5rem;
 }
 
 /* fieldset */
