--- a/scss/sections/section-featured-large-text.scss
+++ b/scss/sections/section-featured-large-text.scss
@@ -1,6 +1,9 @@
 
 .featured-large-text {
     background-color: var(--background-color-large-text);
+    .page-width {
+        max-width: var(--width-large-text);
+    }
 }
 
 .featured-large-text__blocks {
@@ -15,13 +18,20 @@
     }
 }
 
-.featured-large-text__text {
+.featured-large-text__text,
+.featured-large-text__text h1,
+.featured-large-text__text h2,
+.featured-large-text__text h3,
+.featured-large-text__text h4,
+.featured-large-text__text h5,
+.featured-large-text__text h6 {
     color: var(--text-color-large-text);
+    margin-bottom: 0;
+    text-transform: none;
 }
 
 .featured-large-text__text p,
-.featured-large-text__text span,
-.featured-large-text__text a {
+.featured-large-text__text p a {
     font-weight: 300;
     font-size: 2.2rem;
     line-height: 2.6rem;
@@ -35,8 +45,8 @@
 
 @media screen and (min-width:750px) {
     .featured-large-text__text p,
-    .featured-large-text__text span,
-    .featured-large-text__text a {
+    
+    .featured-large-text__text p a {
         font-size: 3.4rem;
         line-height: 3.8rem;
     }
@@ -44,8 +54,7 @@
 
 @media screen and (min-width: 990px) {
     .featured-large-text__text p,
-    .featured-large-text__text span,
-    .featured-large-text__text a {
+    .featured-large-text__text p a {
         font-size: 4.4rem;
         line-height: 4.8rem;
         letter-spacing: -0.05em;
