--- a/snippets/video-item.liquid
+++ b/snippets/video-item.liquid
@@ -11,48 +11,48 @@
 {% endif %}
 
 {% if autoplay == true %}
-    <div class='video-media'>
+    <div class="video-media">
         {% case type %}
             {% when 'files' %}
                 <video
-                    class='js-link hero__media html5'
-                    title='{{ title | escape }}'
+                    class="js-link hero__media html5"
+                    title="{{ title | escape }}"
                     autoplay
                     playsinline
                     loop
                     muted
                     disablePictureInPicture
-                    width='1440'
-                    controlsList='noplaybackrate nodownload'
+                    width="1440"
+                    controlsList="noplaybackrate nodownload"
                 >
-                    <source src='{{ video }}' type='video/mp4'>
+                    <source src="{{ video }}" type="video/mp4">
                 </video>
             {% when 'vimeo' %}
                 <iframe
-                    title='{{ title | escape }}'
-                    src='https://player.vimeo.com/video/{{ video }}?autoplay=1&loop={{ loop }}&autopause=0&muted=1&controls=0&playsinline=1'
-                    class='js-vimeo js-link iframe'
-                    allow='autoplay; encrypted-media'
+                    title="{{ title | escape }}"
+                    src="https://player.vimeo.com/video/{{ video }}?autoplay=1&loop={{ loop }}&autopause=0&muted=1&controls=0&playsinline=1"
+                    class="js-vimeo js-link iframe"
+                    allow="autoplay; encrypted-media"
                     allowfullscreen
-                    frameborder='0'
+                    frameborder="0"
                 ></iframe>
             {% when 'youtube' %}
                 <iframe
-                    title='{{ title | escape }}'
-                    src='https://www.youtube.com/embed/{{ video }}?autoplay=1&loop={{ loop }}&playlist={{ video}}&mute=1&cc_load_policy=0&controls=0&disablekb=0&fs=1&iv_load_policy=1&modestbranding=0&playsinline=1&rel=1&enablejsapi=1&widgetid=1'
-                    class='js-youtube js-link iframe'
-                    allow='autoplay; encrypted-media'
+                    title="{{ title | escape }}"
+                    src="https://www.youtube.com/embed/{{ video }}?autoplay=1&loop={{ loop }}&playlist={{ video}}&mute=1&cc_load_policy=0&controls=0&disablekb=0&fs=1&iv_load_policy=1&modestbranding=0&playsinline=1&rel=1&enablejsapi=1&widgetid=1"
+                    class="js-youtube js-link iframe"
+                    allow="autoplay; encrypted-media"
                     allowfullscreen
-                    frameborder='0'
+                    frameborder="0"
                 ></iframe>
         {% endcase %}
     </div>
 {% else %}
-    <deferred-media class='video-media no-js-hidden' data-media-id='{{ section.id }}'>
+    <deferred-media class="video-media no-js-hidden" data-media-id="{{ section.id }}">
         <button
-            id='Deferred-Poster-Modal-{{ section.id }}'
-            class='video-media__poster'
-            type='button'
+            id="Deferred-Poster-Modal-{{ section.id }}"
+            class="video-media__poster"
+            type="button"
         >
             {%- if image != blank -%}
                 {%- capture image_srcset -%}
@@ -67,28 +67,28 @@
                 {%- endcapture -%}
 
                 <img
-                    srcset='{{ image_srcset }}'
-                    src='{{ image | image_url: width: 1440 }}'
-                    sizes='100vw'
-                    alt='{{ title | escape }}'
-                    loading='lazy'
-                    width='{{ image.width }}'
-                    height='{{ image.height }}'
-                    class='video-media__image'
+                    srcset="{{ image_srcset }}"
+                    src="{{ image | image_url: width: 1440 }}"
+                    sizes="100vw"
+                    alt="{{ title | escape }}"
+                    loading="lazy"
+                    width="{{ image.width }}"
+                    height="{{ image.height }}"
+                    class="video-media__image"
                 >
             {%- else -%}
                 {{ 'collection-2' | placeholder_svg_tag: 'placeholder-svg placeholder collage-card__image' }}
             {%- endif -%}
-            <span class='video-media__poster-button'>
-                {%- render 'icon-play' -%}
+            <span class="video-media__poster-button">
+                {% render 'icons-svg', icons: 'play' %}
             </span>
         </button>
         {% case type %}
             {% when 'files' %}
                 <template>
                     <video
-                        title='{{ title | escape }}'
-                        class='hero__media js-link html5'
+                        title="{{ title | escape }}"
+                        class="hero__media js-link html5"
                         disablePictureInPicture
                         controls
                         autoplay
@@ -98,34 +98,34 @@
                         {% if loop == 1 %}
                             loop
                         {% endif %}
-                        preload='auto'
-                        controlsList='noplaybackrate nodownload'
-                        width='1440'
-                        data-muted='{{ control_audio }}'
+                        preload="auto"
+                        controlsList="noplaybackrate nodownload"
+                        width="1440"
+                        data-muted="{{ control_audio }}"
                     >
-                        <source src='{{ video }}' type='video/mp4'>
+                        <source src="{{ video }}" type="video/mp4">
                     </video>
                 </template>
             {% when 'vimeo' %}
                 <template>
                     <iframe
-                        src='https://player.vimeo.com/video/{{ video }}?autoplay=1&loop={{ loop }}&autopause=0&muted={{ audio }}&controls=1&playsinline=1'
-                        class='js-vimeo js-link iframe'
-                        allow='autoplay; encrypted-media'
+                        src="https://player.vimeo.com/video/{{ video }}?autoplay=1&loop={{ loop }}&autopause=0&muted={{ audio }}&controls=1&playsinline=1"
+                        class="js-vimeo js-link iframe"
+                        allow="autoplay; encrypted-media"
                         allowfullscreen
-                        frameborder='0'
-                        title='{{ title | escape }}'
+                        frameborder="0"
+                        title="{{ title | escape }}"
                     ></iframe>
                 </template>
             {% when 'youtube' %}
                 <template>
                     <iframe
-                        src='https://www.youtube.com/embed/{{ video }}?autoplay=1&loop={{ loop }}&playlist={{ video}}&mute={{ audio }}&cc_load_policy=0&controls=1&disablekb=0&fs=1&iv_load_policy=1&modestbranding=0&playsinline=1&rel=1&enablejsapi=1&widgetid=1'
-                        class='js-youtube js-link iframe'
-                        allow='autoplay; encrypted-media'
+                        src="https://www.youtube.com/embed/{{ video }}?autoplay=1&loop={{ loop }}&playlist={{ video}}&mute={{ audio }}&cc_load_policy=0&controls=1&disablekb=0&fs=1&iv_load_policy=1&modestbranding=0&playsinline=1&rel=1&enablejsapi=1&widgetid=1"
+                        class="js-youtube js-link iframe"
+                        allow="autoplay; encrypted-media"
                         allowfullscreen
-                        frameborder='0'
-                        title='{{ title | escape }}'
+                        frameborder="0"
+                        title="{{ title | escape }}"
                     ></iframe>
                 </template>
         {% endcase %}
