--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -113,6 +113,18 @@
     </head>
 
     <body class="template-{{- template -}}">
+        <div id="page_preloader__bg">
+            <svg
+                aria-hidden="true"
+                focusable="false"
+                role="presentation"
+                class="spinner"
+                viewBox="0 0 66 66"
+                xmlns="http://www.w3.org/2000/svg"
+            >
+                <circle class="path" fill="none" stroke-width="6" cx="33" cy="33" r="30"></circle>
+            </svg>
+        </div>
         <a class="skip-to-content-link button visually-hidden" href="#MainContent">
             {{ 'accessibility.skip_to_text' | t }}
         </a>
@@ -142,6 +154,11 @@
         {% endif %}
 
         <script type="text/javascript">
+            preloaderBg = document.getElementById('page_preloader__bg')
+            window.addEventListener('load', function () {
+                preloaderBg.classList.add('off')
+            })
+
             Shopify.money_format = '{{ amount_format }}'
         </script>
 
