--- a/scss/components/component-search-tabs.scss
+++ b/scss/components/component-search-tabs.scss
@@ -117,6 +117,14 @@
     margin-top: 2rem;
 }
 
+.search-tabs__content {
+    overflow-x: auto;
+    min-height: 75vh;
+    @media screen and (max-width: 749px) { 
+        min-height: inherit;
+    }
+}
+
 .search-tabs__content.pages .search-tabs__list {
     display: block;
 }
