--- a/scss/sections/section-featured-list-banners.scss
+++ b/scss/sections/section-featured-list-banners.scss
@@ -1,8 +1,8 @@
 .featured-list-banners {
     background: var(--bg-color-featured-list-banners);
-    padding-top: calc(.5*var(--pad-top-featured-list-banners));
-    padding-bottom: calc(.5*var(--pad-bot-featured-list-banners));
-    @media screen and (min-width: 750px) {
+    padding-top: calc(.7*var(--pad-top-featured-list-banners));
+    padding-bottom: calc(.7*var(--pad-bot-featured-list-banners));
+    @media screen and (min-width: 991px) {
         padding-top: var(--pad-top-featured-list-banners);
         padding-bottom: var(--pad-bot-featured-list-banners);
     }
@@ -16,16 +16,29 @@
     }
 }
 
-
-
-
-
-@media screen and (min-width: 750px) {
-   
-}
-
 .card-list-banner__item {
     position: relative;
+    overflow: hidden;
+    transition: all 0.3s ease;
+    a {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        display: block;
+        z-index: 2;
+    }
+    img {
+        transition: all .3s ease;
+        transform: scale(1);
+    }
+    &:hover {
+        box-shadow: 0 0 15px rgba(0,0,0,0.2);
+        img {
+            transform: scale(1.1);
+        }
+    }
 }
 
 .card-list-banner__media-wrapper {
@@ -90,6 +103,15 @@
         margin-top: 1rem;
     }
 
+    @media (min-width: 320px) and (max-width: 990px) { 
+        .card-list-banner__subtitle {
+            font-size: 1.4rem;
+        }
+        .card-list-banner__title {
+            font-size: calc(var(--font-heading-scale) * 1.8rem);
+        }
+    }
+
 }
 
 .caption__content--style-2 {
@@ -99,7 +121,7 @@
     .card-list-banner__btn {
         color: var(--bg-caption-featured-list-banners);
     }
-    @media screen and (min-width: 750px) {
+    @media screen and (min-width: 991px) {
         .card-list-banner__subtitle {
             font-size: 2rem;
         }
@@ -108,6 +130,14 @@
         }
         
     }
+    @media (min-width: 320px) and (max-width: 990px) { 
+        .card-list-banner__subtitle {
+            font-size: 1.4rem;
+        }
+        .card-list-banner__title {
+            font-size: calc(var(--font-heading-scale) * 2.2rem);
+        }
+    }
     
 }
 
@@ -115,63 +145,60 @@
     position: absolute;
     display: flex;
     flex-direction: column;
-    padding: 2rem;
+    padding: 1rem;
     z-index: 2;
-    @media screen and (min-width: 750px) {
-        padding: 3rem;
-        &.caption__content--top-right {
-            right: 3rem;
-            top: 3rem;
-        }
-        &.caption__content--top-left {
-            left: 3rem;
-            top: 3rem;
-        }
-        &.caption__content--top-middle {
-            left: 50%;
-            top: 3rem;
-            transform: translate(-50%, 0);
-        }
-        &.caption__content--middle-middle {
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-        }
-        &.caption__content--middle-left {
-            left: 3rem;
-            top: 50%;
-            transform: translate(0, -50%);
-        }
-        &.caption__content--middle-right {
-            right: 3rem;
-            top: 50%;
-            transform: translate(0, -50%);
-        }
-        &.caption__content--bottom-left {
-            bottom: 3rem;
-            left: 3rem;
-        }
-        &.caption__content--bottom-right {
-            bottom: 3rem;
-            right: 3rem;
-        }
-        &.caption__content--bottom-middle {
-            bottom: 3rem;
-            left: 50%;
-            transform: translate(-50%, 0);
-        }
-        .card-list-banner__btn {
-            margin-top: 1.4rem;
-            width: max-content;
+    &.caption__content--top-right {
+        right: 3rem;
+        top: 3rem;
+    }
+    &.caption__content--top-left {
+        left: 3rem;
+        top: 3rem;
+    }
+    &.caption__content--top-middle {
+        left: 50%;
+        top: 3rem;
+        transform: translate(-50%, 0);
+    }
+    &.caption__content--middle-middle {
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
+    &.caption__content--middle-left {
+        left: 3rem;
+        top: 50%;
+        transform: translate(0, -50%);
+    }
+    &.caption__content--middle-right {
+        right: 3rem;
+        top: 50%;
+        transform: translate(0, -50%);
+    }
+    &.caption__content--bottom-left {
+        bottom: 3rem;
+        left: 3rem;
+    }
+    &.caption__content--bottom-right {
+        bottom: 3rem;
+        right: 3rem;
+    }
+    &.caption__content--bottom-middle {
+        bottom: 3rem;
+        left: 50%;
+        transform: translate(-50%, 0);
+    }
+    .card-list-banner__btn {
+        margin-top: 1.4rem;
+        width: max-content;
+        background: none;
+        border: none;
+        padding: 0 0 .4rem 0;
+        border-bottom: 1px solid var(--bg-caption-featured-list-banners);
+        border-radius: 0;
+        &:hover {
+            border-color: transparent;
             background: none;
-            border: none;
-            padding: 0 0 .4rem 0;
-            border-bottom: 1px solid var(--bg-caption-featured-list-banners);
-            border-radius: 0;
-            &:hover {
-                border-color: transparent;
-                background: none;
-            }
         }
     }
 }
@@ -192,20 +219,86 @@
     width: max-content;
 }
 
+.featured-list-banners__scroll {
+    @media screen and (max-width: 767px) {
+        overflow: auto;
+        flex-wrap: nowrap;
+        padding-top: 15px;
+        margin-top: -15px;
+        padding-bottom: 15px;
+        margin-bottom: -15px;
+        .card-list-banner__big_50,
+        .card-list-banner__two-big_50 {
+            min-width: 350px;
+        }
+    }
+}
+
+.featured-list-banners__box--big-50 {
+    margin-bottom: -2rem;
+    .card-list-banner__item {
+        margin-bottom: 2rem;
+    }
+}
+
+
 .card-list-banner__two-big_50 {
-    height: 100%;
+    //height: 100%;
+    margin-bottom: 0;
+    @media screen and (min-width: 991px) {
+        margin-bottom: -3rem;
+    }
     .card-list-banner__box_1,
     .card-list-banner__box_2 {
-        height: 0;
         position: relative;
-        padding-top: 30%;
-        .card-list-banner__item {
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
+        margin-bottom: 2rem;
+        @media screen and (min-width: 991px) {
+            margin-bottom: 3rem;
+            .media__size--cropped {
+                padding-top: calc(28% - 1.5rem);
+            }
+            .media__size--landscape {
+                padding-top: calc(33.3% - 1.5rem);
+            }
+            .media__size--square {
+                padding-top: calc(50% - 1.5rem);
+            }
+            .media__size--portrait {
+                padding-top: calc(62.5% - 1.5rem);
+            }
         }
+        @media (min-width: 320px) and (max-width: 990px) {
+            .media__size--cropped {
+                padding-top: calc(28% - 1rem);
+            }
+            .media__size--landscape {
+                padding-top: calc(33.3% - 1rem);
+            }
+            .media__size--square {
+                padding-top: calc(50% - 1rem);
+            }
+            .media__size--portrait {
+                padding-top: calc(62.5% - 1rem);
+            }
+        }
+        .card-list-banner__item {
+            margin-bottom: 0;
+        }
+    }
+    
+    .caption__content--style-2 {
+        padding: 1rem;
+        @media screen and (min-width: 768px) {
+            padding: 1rem;
+            .card-list-banner__subtitle {
+                font-size: 1.4rem;
+            }
+            .card-list-banner__title {
+                font-size: calc(var(--font-heading-scale) * 2.4rem);
+            }
+            
+        }
+        
     }
 }
 
